versioned_docs/version-2.16/reference/goals/export.mdx
---
title: export
description: |
  Export Pants data for use in other tools, such as IDEs.
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

```
pants export [args]
```

Export Pants data for use in other tools, such as IDEs.

Backend: <span className="color--primary">`pants.core`</span>

Config section: <span className="color--primary">`[export]`</span>

<span className={styles.options}>

## Basic options

### `resolve`

<Option
  cli_repr={`--export-resolve="['<str>', '<str>', ...]"`}
  env_repr='PANTS_EXPORT_RESOLVE'
  toml_repr={`[export]
resolve = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[]`}
>

Export the specified resolve(s). The export format is backend-specific, e.g., Python resolves are exported as virtualenvs.

</Option>

### `py_resolve_format`

<Option
  cli_repr={`--export-py-resolve-format=<PythonResolveExportFormat>`}
  env_repr='PANTS_EXPORT_PY_RESOLVE_FORMAT'
  toml_repr={`[export]
py_resolve_format = <PythonResolveExportFormat>`}
  one_of='mutable_virtualenv, symlinked_immutable_virtualenv'
  default_repr={`mutable_virtualenv`}
>

Export Python resolves using this format. Options are:

- mutable_virtualenv: Export a standalone mutable virtualenv that you can
  further modify.
- symlinked_immutable_virtualenv: Export a symlink into a cached Python virtualenv.
  This virtualenv will have no pip binary, and will be immutable. Any attempt to
  modify it will corrupt the cache! It may, however, take significantly less time
  to export than a standalone, mutable virtualenv.

</Option>

## Advanced options

None

## Deprecated options

### `symlink_python_virtualenv`

<Option
  cli_repr={`--[no-]export-symlink-python-virtualenv`}
  env_repr='PANTS_EXPORT_SYMLINK_PYTHON_VIRTUALENV'
  toml_repr={`[export]
symlink_python_virtualenv = <bool>`}
  default_repr={`False`}
  removal_version='2.20.0.dev0'
  removal_hint={'Set the `[export].py_resolve_format` option to \'symlinked_immutable_virtualenv\''}
>

Export a symlink into a cached Python virtualenv. This virtualenv will have no pip binary, and will be immutable. Any attempt to modify it will corrupt the cache! It may, however, take significantly less time to export than a standalone, mutable virtualenv will.

</Option>

## Related subsystems

- [environments-preview](../subsystems/environments-preview.mdx)
- [filter](../subsystems/filter.mdx)

</span>
